--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,20 +1,65 @@
 <!DOCTYPE html>
 <html>
+<head>
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+    <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1, maximum-scale=1, minimal-ui" />
+    <meta name="description" content="{{ site.description }}" />
+    <title>{{ page.title }}</title>
+    <link rel="stylesheet" href="/static/base.css" />
+    <link rel="alternate" type="application/rss+xml" title="RSS Feed" href="/rss.xml" />
+    {% if page.syntax == true %}
+        <link rel="stylesheet" href="/static/solarized-dark.css" />
+    {% elsif page.syntax == true and page.style == "light" %}
+        <link rel="stylesheet" href="/static/solarized-light.css" />
+    {% endif %}
+    {% if page.style == "dark" %}
+        <link rel="stylesheet" href="/static/dark.css" />
+    {% endif %}
+</head>
+<body>
 
-  {% include head.html %}
-
-  <body>
-
-    {% include header.html %}
-
-    <div class="page-content">
-      <div class="wrapper">
-        {{ content }}
-      </div>
+<div class="menu">
+    <div class="content">
+        <ul>
+            <li class="index {% if page.section == "index" %}selected{% endif %}">
+                <a href="/">Home</a>
+            </li>
+            <li class="projects {% if page.section == "projects" %}selected{% endif%}">
+                <a href="/projects/">Projects</a>
+            </li>
+            <li class="archive {% if page.section == None or page.section == "archive" %}selected{% endif %}">
+                <a href="/archive/">Archive</a>
+            </li>
+            <li class="about {% if page.section == "about" %}selected{% endif %}">
+                <a href="/about/">About</a>
+            </li>
+        </ul>
     </div>
+</div>
 
-    {% include footer.html %}
+<div class="header">
+    <div class="content">
+        <h1 class="title">
+            {% if page.subtitle %}
+                {{ page.subtitle }}
+            {% else %}
+                Archive
+            {% endif %}
+        </h1>
+    </div>
+</div>
 
-  </body>
+<div class="main">
+    <div class="content">
+        {{ content }}
+    </div>
+</div>
 
+<div class="footer">
+    <div class="content">
+        {% include social.html %}
+    </div>
+</div>
+
+</body>
 </html>
