--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -22,13 +22,10 @@
     <div class="content">
         <ul>
             <li class="index {% if page.section == "index" %}selected{% endif %}">
-                <a href="/">Home</a>
+                <a href="/">Projects</a>
             </li>
-            <li class="projects {% if page.section == "projects" %}selected{% endif%}">
-                <a href="/projects/">Projects</a>
-            </li>
-            <li class="archive {% if page.section == None or page.section == "archive" %}selected{% endif %}">
-                <a href="/archive/">Archive</a>
+            <li class="blog {% if page.section == None or page.section == "blog" %}selected{% endif %}">
+                <a href="/blog/">Blog</a>
             </li>
             <li class="about {% if page.section == "about" %}selected{% endif %}">
                 <a href="/about/">About</a>
@@ -43,7 +40,7 @@
             {% if page.subtitle %}
                 {{ page.subtitle }}
             {% else %}
-                Archive
+                Blog
             {% endif %}
         </h1>
     </div>
