--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,19 +1,22 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1, maximum-scale=1, minimal-ui" />
-    <meta name="description" content="{{ site.description }}" />
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
+    <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1, maximum-scale=1, minimal-ui"/>
+    <meta name="description" content="{{ site.description }}"/>
     <title>{{ page.title }}</title>
-    <link rel="stylesheet" href="/static/base.css" />
-    <link rel="alternate" type="application/rss+xml" title="RSS Feed" href="/rss.xml" />
+    <link rel="stylesheet" href="/static/base.css"/>
+    <link rel="alternate" type="application/rss+xml" title="RSS Feed" href="/rss.xml"/>
     {% if page.syntax == true %}
-        <link rel="stylesheet" href="/static/solarized-dark.css" />
+        <link rel="stylesheet" href="/static/solarized-dark.css"/>
     {% elsif page.syntax == true and page.style == "light" %}
-        <link rel="stylesheet" href="/static/solarized-light.css" />
+        <link rel="stylesheet" href="/static/solarized-light.css"/>
     {% endif %}
     {% if page.style == "dark" %}
-        <link rel="stylesheet" href="/static/dark.css" />
+        <link rel="stylesheet" href="/static/dark.css"/>
+    {% endif %}
+    {% if page.projects == true %}
+        <link rel="stylesheet" href="/static/projects.css"/>
     {% endif %}
 </head>
 <body>
@@ -24,7 +27,7 @@
             <li class="index {% if page.section == "index" %}selected{% endif %}">
                 <a href="/">Projects</a>
             </li>
-            <li class="blog {% if page.section == None or page.section == "blog" %}selected{% endif %}">
+            <li class="blog {% if page.section == "blog" %}selected{% endif %}">
                 <a href="/blog/">Blog</a>
             </li>
             <li class="about {% if page.section == "about" %}selected{% endif %}">
