--- a/static/base.css
+++ b/static/base.css
@@ -80,7 +80,8 @@ a.typo {
 
 .content {
   width: 1000px;
-  margin: 0 auto; }
+  margin: 0 auto;
+  overflow: hidden; }
 
 .menu {
   padding: 18px 0 14px 0;
