--- a/static/solarized-dark.css
+++ b/static/solarized-dark.css
@@ -1,92 +1,84 @@
-/* Solarized Dark 
+/* Sunburst Dark 
 
-For use with Jekyll and Pygments
-
-http://ethanschoonover.com/solarized
-
-Optimized for Spaceman theme
-
-http://lucianmarin.com/spaceman
-
-SOLARIZED HEX      ROLE
+WRONG HEX      ROLE
 --------- -------- ------------------------------------------
-base03    #002b36  background
-base01    #586e75  comments / secondary content
+base03    #000000  background
+base01    #A8A8A8  comments / secondary content
 base1     #93a1a1  body text / default code / primary content
-orange    #cb4b16  constants
-red       #dc322f  regex, special keywords
-blue      #268bd2  reserved keywords
-cyan      #2aa198  strings, numbers
-green     #859900  operators, other keywords
+orange    #3d9ad6  constants
+red       #ffffff  regex, special keywords
+blue      #99cf50  reserved keywords
+cyan      #99cf50  strings, numbers
+green     #e28964  operators, other keywords
 */
 
-.highlight { /*background-color: #002b36;*/ color: #93a1a1 }
+.highlight { /*background-color: #000000;*/ color: #93a1a1 }
 .highlight .lineno { color: #404448; } /* Line Number */
-.highlight .c { color: #586e75 } /* Comment */
+.highlight .c { color: #A8A8A8 } /* Comment */
 .highlight .err { color: #93a1a1 } /* Error */
 .highlight .g { color: #93a1a1 } /* Generic */
-.highlight .k { color: #859900 } /* Keyword */
+.highlight .k { color: #e28964 } /* Keyword */
 .highlight .l { color: #93a1a1 } /* Literal */
 .highlight .n { color: #93a1a1 } /* Name */
-.highlight .o { color: #859900 } /* Operator */
-.highlight .x { color: #cb4b16 } /* Other */
+.highlight .o { color: #e28964 } /* Operator */
+.highlight .x { color: #3d9ad6 } /* Other */
 .highlight .p { color: #93a1a1 } /* Punctuation */
-.highlight .cm { color: #586e75 } /* Comment.Multiline */
-.highlight .cp { color: #859900 } /* Comment.Preproc */
-.highlight .c1 { color: #586e75 } /* Comment.Single */
-.highlight .cs { color: #859900 } /* Comment.Special */
-.highlight .gd { color: #2aa198 } /* Generic.Deleted */
+.highlight .cm { color: #A8A8A8 } /* Comment.Multiline */
+.highlight .cp { color: #e28964 } /* Comment.Preproc */
+.highlight .c1 { color: #A8A8A8 } /* Comment.Single */
+.highlight .cs { color: #e28964 } /* Comment.Special */
+.highlight .gd { color: #99cf50 } /* Generic.Deleted */
 .highlight .ge { color: #93a1a1; /*font-style: italic*/ } /* Generic.Emph */
-.highlight .gr { color: #dc322f } /* Generic.Error */
-.highlight .gh { color: #cb4b16 } /* Generic.Heading */
-.highlight .gi { color: #859900 } /* Generic.Inserted */
+.highlight .gr { color: #ffffff } /* Generic.Error */
+.highlight .gh { color: #3d9ad6 } /* Generic.Heading */
+.highlight .gi { color: #e28964 } /* Generic.Inserted */
 .highlight .go { color: #93a1a1 } /* Generic.Output */
 .highlight .gp { color: #93a1a1 } /* Generic.Prompt */
 .highlight .gs { color: #93a1a1; /*font-weight: bold*/ } /* Generic.Strong */
-.highlight .gu { color: #cb4b16 } /* Generic.Subheading */
+.highlight .gu { color: #3d9ad6 } /* Generic.Subheading */
 .highlight .gt { color: #93a1a1 } /* Generic.Traceback */
-.highlight .kc { color: #cb4b16 } /* Keyword.Constant */
-.highlight .kd { color: #268bd2 } /* Keyword.Declaration */
-.highlight .kn { color: #859900 } /* Keyword.Namespace */
-.highlight .kp { color: #859900 } /* Keyword.Pseudo */
-.highlight .kr { color: #268bd2 } /* Keyword.Reserved */
-.highlight .kt { color: #dc322f } /* Keyword.Type */
+.highlight .kc { color: #3d9ad6 } /* Keyword.Constant */
+.highlight .kd { color: #99cf50 } /* Keyword.Declaration */
+.highlight .kn { color: #e28964 } /* Keyword.Namespace */
+.highlight .kp { color: #e28964 } /* Keyword.Pseudo */
+.highlight .kr { color: #99cf50 } /* Keyword.Reserved */
+.highlight .kt { color: #ffffff } /* Keyword.Type */
 .highlight .ld { color: #93a1a1 } /* Literal.Date */
-.highlight .m { color: #2aa198 } /* Literal.Number */
-.highlight .s { color: #2aa198 } /* Literal.String */
+.highlight .m { color: #99cf50 } /* Literal.Number */
+.highlight .s { color: #99cf50 } /* Literal.String */
 .highlight .na { color: #93a1a1 } /* Name.Attribute */
 .highlight .nb { color: #B58900 } /* Name.Builtin */
-.highlight .nc { color: #268bd2 } /* Name.Class */
-.highlight .no { color: #cb4b16 } /* Name.Constant */
-.highlight .nd { color: #268bd2 } /* Name.Decorator */
-.highlight .ni { color: #cb4b16 } /* Name.Entity */
-.highlight .ne { color: #cb4b16 } /* Name.Exception */
-.highlight .nf { color: #268bd2 } /* Name.Function */
+.highlight .nc { color: #99cf50 } /* Name.Class */
+.highlight .no { color: #3d9ad6 } /* Name.Constant */
+.highlight .nd { color: #99cf50 } /* Name.Decorator */
+.highlight .ni { color: #3d9ad6 } /* Name.Entity */
+.highlight .ne { color: #3d9ad6 } /* Name.Exception */
+.highlight .nf { color: #99cf50 } /* Name.Function */
 .highlight .nl { color: #93a1a1 } /* Name.Label */
 .highlight .nn { color: #93a1a1 } /* Name.Namespace */
 .highlight .nx { color: #93a1a1 } /* Name.Other */
 .highlight .py { color: #93a1a1 } /* Name.Property */
-.highlight .nt { color: #268bd2 } /* Name.Tag */
-.highlight .nv { color: #268bd2 } /* Name.Variable */
-.highlight .ow { color: #859900 } /* Operator.Word */
+.highlight .nt { color: #99cf50 } /* Name.Tag */
+.highlight .nv { color: #99cf50 } /* Name.Variable */
+.highlight .ow { color: #e28964 } /* Operator.Word */
 .highlight .w { color: #93a1a1 } /* Text.Whitespace */
-.highlight .mf { color: #2aa198 } /* Literal.Number.Float */
-.highlight .mh { color: #2aa198 } /* Literal.Number.Hex */
-.highlight .mi { color: #2aa198 } /* Literal.Number.Integer */
-.highlight .mo { color: #2aa198 } /* Literal.Number.Oct */
-.highlight .sb { color: #586e75 } /* Literal.String.Backtick */
-.highlight .sc { color: #2aa198 } /* Literal.String.Char */
+.highlight .mf { color: #99cf50 } /* Literal.Number.Float */
+.highlight .mh { color: #99cf50 } /* Literal.Number.Hex */
+.highlight .mi { color: #99cf50 } /* Literal.Number.Integer */
+.highlight .mo { color: #99cf50 } /* Literal.Number.Oct */
+.highlight .sb { color: #A8A8A8 } /* Literal.String.Backtick */
+.highlight .sc { color: #99cf50 } /* Literal.String.Char */
 .highlight .sd { color: #93a1a1 } /* Literal.String.Doc */
-.highlight .s2 { color: #2aa198 } /* Literal.String.Double */
-.highlight .se { color: #cb4b16 } /* Literal.String.Escape */
+.highlight .s2 { color: #99cf50 } /* Literal.String.Double */
+.highlight .se { color: #3d9ad6 } /* Literal.String.Escape */
 .highlight .sh { color: #93a1a1 } /* Literal.String.Heredoc */
-.highlight .si { color: #2aa198 } /* Literal.String.Interpol */
-.highlight .sx { color: #2aa198 } /* Literal.String.Other */
-.highlight .sr { color: #dc322f } /* Literal.String.Regex */
-.highlight .s1 { color: #2aa198 } /* Literal.String.Single */
-.highlight .ss { color: #2aa198 } /* Literal.String.Symbol */
-.highlight .bp { color: #268bd2 } /* Name.Builtin.Pseudo */
-.highlight .vc { color: #268bd2 } /* Name.Variable.Class */
-.highlight .vg { color: #268bd2 } /* Name.Variable.Global */
-.highlight .vi { color: #268bd2 } /* Name.Variable.Instance */
-.highlight .il { color: #2aa198 } /* Literal.Number.Integer.Long */
+.highlight .si { color: #99cf50 } /* Literal.String.Interpol */
+.highlight .sx { color: #99cf50 } /* Literal.String.Other */
+.highlight .sr { color: #ffffff } /* Literal.String.Regex */
+.highlight .s1 { color: #99cf50 } /* Literal.String.Single */
+.highlight .ss { color: #99cf50 } /* Literal.String.Symbol */
+.highlight .bp { color: #99cf50 } /* Name.Builtin.Pseudo */
+.highlight .vc { color: #99cf50 } /* Name.Variable.Class */
+.highlight .vg { color: #99cf50 } /* Name.Variable.Global */
+.highlight .vi { color: #99cf50 } /* Name.Variable.Instance */
+.highlight .il { color: #99cf50 } /* Literal.Number.Integer.Long */
