--- a/static/projects.css
+++ b/static/projects.css
@@ -4,41 +4,30 @@
 
 a.projectbutton {
 	background-color: black;
-	color: black;
-	font: 35px "futura-pt";	
 	display: block;
 	width: 360px;
 	height: 269px;
-	padding-top: 0px;
-}
-
-a.projectbutton2 {
-	color: black;
-	font: 35px "futura-pt";	
-	display: block;
-	width: 425px;
-	height: 265px;
-	padding-top: 160px;
 }
 
 span.projecttitle {
-	background-color: white;
+	background-color: transparent;
+	color: white;
+	font: 35px "Source Sans Pro";
 	opacity: 0;
 }
 
 div.projectleftbar {
-	float:left;
+	float: left;
 	text-align: center;
-	width: 475px;
+	width: 500px;
 	margin-bottom: 25px;
 	margin-top: 25px;
 }
 
 div.projectrightbar {
 	float: right;
-	width: 475px;
+	width: 500px;
 	text-align: center;
-	margin-left: 50px;
 	margin-bottom: 25px;
 	margin-top: 25px;
 }
@@ -59,7 +48,6 @@ div.projectimagerow {
 	float: center;
 }
 
-
 div.projecttextleftbar {
 	float: left;
 	text-align: left;
@@ -67,7 +55,7 @@ div.projecttextleftbar {
 }
 
 div.projecttextrightbar {
-	float:right;
+	float: right;
 	width: 475px;
 	text-align: left;
 	margin-left: 50px;
@@ -87,7 +75,6 @@ div.caption {
 	font-size: 14px;
 }
 
-
 #thermo {
 	background-image: url("../images/thermo.png");
 	border-width: 10px;
@@ -99,5 +86,12 @@ div.caption {
 	-moz-transition: all .5s;
     -webkit-transition: all .5s;
     transition: all .5s;
-	opacity: 0.5;
+	opacity: 0.35;
+}
+
+#thermo:hover .projecttitle {
+	-moz-transition: all .5s;
+    -webkit-transition: all .5s;
+    transition: all .5s;
+	opacity: 1;
 }
