--- a/static/base.css
+++ b/static/base.css
@@ -79,7 +79,7 @@ a.typo {
       background-color: #ea4c89; }
 
 .content {
-  width: 1000px;
+  width: 60%;
   margin: 0 auto;
   overflow: hidden; }
 
