--- a/static/projects.css
+++ b/static/projects.css
@@ -5,8 +5,7 @@
 a.projectbutton {
 	background-color: black;
 	display: block;
-	width: 360px;
-	height: 269px;
+	height: 300px;
 }
 
 span.projecttitle {
@@ -18,61 +17,26 @@ span.projecttitle {
 
 div.projectleftbar {
 	float: left;
-	text-align: center;
-	width: 500px;
+	position: relative;
+	width: 47.5%;
 	margin-bottom: 25px;
 	margin-top: 25px;
 }
 
 div.projectrightbar {
 	float: right;
-	width: 500px;
-	text-align: center;
+	width: 47.5%;
 	margin-bottom: 25px;
 	margin-top: 25px;
 }
 
 div.projectmenu {
-	margin-top: -25px;
+	margin-top: -50px;
 }
 
 div.projectrow {
 	margin-top: 25px;
 	margin-bottom: 25px;
-	width: 1000px;
-}
-
-div.projectimagerow {
-	margin-top: 25px;
-	margin-bottom: 15px;
-	float: center;
-}
-
-div.projecttextleftbar {
-	float: left;
-	text-align: left;
-	width: 475px;
-}
-
-div.projecttextrightbar {
-	float: right;
-	width: 475px;
-	text-align: left;
-	margin-left: 50px;
-}
-
-div.projecttextrow {
-	margin-top: 15px;
-	float: left;
-}
-
-div.caption {
-	padding-left: 9px;
-	padding-right: 9px;
-	color: white;
-	background-color: #888888;
-	text-align: left;
-	font-size: 14px;
 }
 
 #thermo {
