--- a/static/projects.css
+++ b/static/projects.css
@@ -8,6 +8,10 @@ a.button {
 	display: block;
 }
 
+.button img {
+	width: 100%;
+}
+
 a.title {
 	position: absolute;
 	background-color: transparent;
