--- a/static/projects.css
+++ b/static/projects.css
@@ -27,16 +27,16 @@ div.lefttile {
 	position: relative;
 	text-align: center;
 	width: 47.5%;
-	margin-bottom: 25px;
-	margin-top: 25px;
+	margin-bottom: 2%;
+	margin-top: 2%;
 }
 
 div.righttile {
 	float: right;
 	position: relative;
 	width: 47.5%;
-	margin-bottom: 25px;
-	margin-top: 25px;
+	margin-bottom: 2%;
+	margin-top: 2%;
 }
 
 div.projectmenu {
