--- a/static/projects.css
+++ b/static/projects.css
@@ -40,12 +40,12 @@ div.righttile {
 }
 
 div.projectmenu {
-	margin-top: -50px;
+	margin-top: -3%;
 }
 
 div.row {
-	margin-top: 25px;
-	margin-bottom: 25px;
+	margin-top: 2%;
+	margin-bottom: 2%;
 }
 
 #thermo {
