--- a/static/base.css
+++ b/static/base.css
@@ -291,6 +291,13 @@ html {
   .content {
     width: 80%; }
 
+  .header h1 {
+    font-weight: bold;
+    font-size: 42px;
+    line-height: 96px;
+    letter-spacing: -4px;
+    white-space: nowrap; }
+
   .post p img {
     width: 100%;
     height: auto;
