--- a/static/projects.css
+++ b/static/projects.css
@@ -17,7 +17,7 @@ span.title {
 	background-color: transparent;
 	color: white;
 	font: 35px "Source Sans Pro";
-	opacity: 1;
+	opacity: 0;
 	bottom: 0;
 	left: 0;
 	right: 0;
@@ -68,13 +68,13 @@ div.row {
     -webkit-transition: all .5s;
     transition: all .5s;
 	opacity: 0.5;
+}
 
-	.title {
-		-moz-transition: all .5s;
-	    -webkit-transition: all .5s;
-	    transition: all .5s;
-		opacity: 0.5;
-	}
+#thermo:hover span {
+	-moz-transition: all .5s;
+	-webkit-transition: all .5s;
+	transition: all .5s;
+	opacity: 1;
 }
 
 #thermoid:hover {
