--- a/static/projects.css
+++ b/static/projects.css
@@ -61,10 +61,17 @@ div.row {
 	}
 
 	#thermo {
-		width: 100%;
 		border-width: 3px;
 		border-style: solid;
 		border-color: #01B7E5;
+	}
+
+	div.lefttile {
+		width: 100%;
+	}
+
+	div.righttile {
+		width: 100%;
 	}
 }
 
