--- a/static/projects.css
+++ b/static/projects.css
@@ -9,8 +9,21 @@ a.button {
 	text-align: center;
 }
 
+.button:before {
+	content: '';
+	display: inline-block;
+	height: 100%;
+	vertical-align: middle;
+}
+
 .button img {
 	width: 100%;
+}
+
+b.title2 {
+	display: inline-block;
+	vertical-align: middle;
+	width: 75%;
 }
 
 span.title {
@@ -21,7 +34,7 @@ span.title {
 	opacity: 0;
 	left: 0;
 	right: 0;
-	padding-top: 33%;
+	vertical-align: middle;
 }
 
 div.lefttile {
