--- a/static/projects.css
+++ b/static/projects.css
@@ -13,7 +13,7 @@ a.button {
 	width: 100%;
 }
 
-span.title {
+div.title {
 	background-color: transparent;
 	color: white;
 	font: 35px "Source Sans Pro";
@@ -98,7 +98,7 @@ div.row {
 	opacity: 0.5;
 }
 
-#thermo:hover span {
+#thermo:hover div {
 	-moz-transition: all .5s;
 	-webkit-transition: all .5s;
 	transition: all .5s;
