--- a/static/base.css
+++ b/static/base.css
@@ -269,6 +269,7 @@ a.typo {
       margin-right: 20px; }
 
 .page {
+  color: #E0E0E0;
   margin-bottom: 30px; }
   .page p {
     text-indent: 0px; }
@@ -277,8 +278,6 @@ a.typo {
     .page p img {
       margin: 0px 0;
       display: block;
-      border: white 6px solid;
-      border-radius: 4px;
       width: 100%;
       height: auto; }
     .page p sup {
@@ -292,24 +291,28 @@ a.typo {
       border-bottom: #009ea0 2px solid;
       border-radius: 4px; }
   .page ul {
-    list-style: square;
+    list-style: outside;
     margin-left: 40px; }
   .page ol {
     margin-left: 0px; }
   .page code {
     font-family: "Ubuntu Mono", monospace; }
+  .page pre {
+    margin: 20px 0;
+    margin-left: 40px;
+    color: gray; }
   .page h1, .page h2, .page h3, .page h4, .page h5, .page h6 {
     text-indent: 0px;
-    color: #009ea0; }
+    color: #01B7E5; }
   .page h1 {
-    font-size: 30px;
+    font-size: 36px;
     font-weight: 300;
     line-height: 32px;
     margin: 18px 0; }
   .page h2 {
     font-size: 28px;
     font-weight: 300;
-    line-height: 32px;
+    line-height: 32px;4A4A4A
     margin: 16px 0; }
   .page h3 {
     font-size: 24px;
@@ -334,22 +337,11 @@ a.typo {
     .page blockquote p {
       text-indent: 0; }
   .page a {
-    background-color: #fedd92;
-    color: #484440;
-    border-bottom: #fedd92 2px solid;
-    border-radius: 4px;
+    color: #C2D41E;
     padding: 0 4px;
     transition: background-color 0.3s, color 0.3s, border 0.3s; }
     .page a:hover {
-      background-color: #fcb514;
-      border-bottom: #fcb514 2px solid; }
-    .page a.follow {
-      background-color: #fedd92;
-      border-bottom: #fedd92 2px solid; }
-      .page a.follow:hover {
-        color: #484440;
-        background-color: #fcb514;
-        border-bottom: #fcb514 2px solid; }
+      background-color: #4A4A4A; }
   .page .info {
     font-style: italic;
     text-indent: 0; }
