--- a/static/base.css
+++ b/static/base.css
@@ -2,7 +2,7 @@
 @import url(http://fonts.googleapis.com/css?family=Ubuntu);
 @import url(http://fonts.googleapis.com/css?family=Ubuntu+Mono);
 ::-moz-selection {
-  background: #fedd92; }
+  background: #01B7E5; }
 
 ::selection {
   background: #01B7E5; }
