--- a/static/projects.css
+++ b/static/projects.css
@@ -15,6 +15,12 @@ a.button {
 	background-color: black;
 	display: inline-block;
 	text-align: center;
+	width: 100%;
+	height: 500px;
+	box-sizing: border-box;
+	background-size: cover;
+	background-position: center;
+	background-repeat: no-repeat;
 }
 
 .button img {
@@ -84,6 +90,12 @@ div.row {
 	border-color: #01B7E5;
 }
 
+#imageThumb div {
+	-moz-transition: all .5s;
+	-webkit-transition: all .5s;
+	transition: all .5s;
+}
+
 @media (max-width: 640px) {
 	span.title {
 		font-size: 12px;
@@ -104,23 +116,11 @@ div.row {
 	}
 }
 
-#imageThumb:hover img {
-	-moz-transition: all .5s;
-    -webkit-transition: all .5s;
-    transition: all .5s;
-	opacity: 0.5;
+#imageThumb:hover .wrap {
+	background: rgba(0, 0, 0, 0.6);
 }
 
-#imageThumb:hover div {
-	-moz-transition: all .5s;
-	-webkit-transition: all .5s;
-	transition: all .5s;
-	opacity: 1;
-}
-
-#imageThumbid:hover {
-	-moz-transition: all .5s;
-    -webkit-transition: all .5s;
-    transition: all .5s;
+#imageThumb:hover .title,
+#imageThumb:hover .wrap {
 	opacity: 1;
 }
