--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -33,6 +33,9 @@
             <li class="about {% if page.section == "about" %}selected{% endif %}">
                 <a href="/about/">About</a>
             </li>
+            <li class="resume">
+                <a href="../resume/Resume.pdf">Resume</a>
+            </li>
         </ul>
     </div>
 </div>
