--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -34,7 +34,7 @@
                 <a href="/about/">About</a>
             </li>
             <li class="resume">
-                <a href="../resume/Resume.pdf">Resume</a>
+                <a href="../resume/Resume.pdf">Résumé</a>
             </li>
         </ul>
     </div>
