--- a/static/base.css
+++ b/static/base.css
@@ -382,10 +382,16 @@ html {
 
   .header h1 {
     font-weight: bold;
-    font-size: 42px;
+    font-size: 36px;
     line-height: 50px;
     letter-spacing: 0px;
     white-space: nowrap; }
+
+  .header h2 {
+    font-size: 16px; }
+
+  .header h3 {
+    font-size: 10px; }
 
   .post p img {
     width: 100%;
