--- a/static/projects.css
+++ b/static/projects.css
@@ -97,11 +97,8 @@ div.row {
 }
 
 @media (max-width: 640px) {
-	span.title {
-		font-size: 12px;
-	}
-
 	#imageThumb {
+		opacity: 0.6;
 		border-width: 3px;
 		border-style: solid;
 		border-color: #01B7E5;
