--- a/static/projects.css
+++ b/static/projects.css
@@ -98,10 +98,13 @@ div.row {
 
 @media (max-width: 640px) {
 	#imageThumb {
-		opacity: 0.6;
 		border-width: 3px;
 		border-style: solid;
 		border-color: #01B7E5;
+	}
+
+	#imageThumb .wrap {
+		opacity: 0.6;
 	}
 
 	div.title {
