--- a/static/base.css
+++ b/static/base.css
@@ -382,33 +382,26 @@ html {
 
   .header h1 {
     font-weight: bold;
-    font-size: 36px;
+    font-size: 24px;
     line-height: 50px;
     letter-spacing: 0px;
     white-space: nowrap; }
 
   .header h2 {
-    font-size: 16px; }
+    font-size: 10px; }
 
   .header h3 {
-    font-size: 10px; }
+    font-size: 8px; }
 
   .post p img {
     width: 100%;
     height: auto;
     margin-left: -6px; }
 
+  .page p img {
+    width: 100%;
+    height: auto;
+    margin-left: -6px; }
+
   .blog li a {
     white-space: nowrap; } }
-@media (max-width: 375px) {
-  .content {
-    width: 87.5%; }
-
-  .meta span {
-    display: none; }
-  .meta span:first-child,
-  .meta span:last-child {
-    display: inline; }
-
-  .browse p {
-    padding-left: 0; } }
