--- a/static/base.css
+++ b/static/base.css
@@ -408,11 +408,15 @@ html {
   }
 
   .page h2 {
-    font-size: 12px;
+    font-size: 20px;
   }
 
   .page h3 {
-    font-size: 8px;
+    font-size: 16px;
+  }
+
+  .page p sup {
+    font-size: 10px;
   }
 
   .blog li a {
