--- a/static/dark.css
+++ b/static/dark.css
@@ -7,7 +7,7 @@ body {
   .menu ul li a:hover {
     color: #b5b6b7; }
 .menu ul li.selected a {
-  color: #01B7E5; }
+  color: #FFFFFF; }
 
 .header {
   color: #FFFFFF; }
