--- a/static/base.css
+++ b/static/base.css
@@ -13,7 +13,7 @@
 
 body {
   background-color: #e4e2e0;
-  font-family: "Source Sans Pro", Helvetica, Arial, sans-serif;
+  font-family: "Ubuntu";
   font-size: 20px;
   line-height: 24px;
   color: #484440;
